[package]
name = "radio_pi"
version = "0.1.0"
authors = ["Andrew Burgess <andrew@andrewburgess.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "1.0", features = ["ssl"] }
base64 = "0.1"
dotenv = "0.10"
dotenv_codegen = "0.10"
futures = "0.1"
openssl = { version = "0.10", features = ["v110"] }
serde = "1.0"