[package]
name = "radio_pi"
version = "0.1.0"
authors = ["Andrew Burgess <andrew@andrewburgess.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.1"
dotenv = "0.10"
futures = "0.1"
hyper = "0.12"
qstring = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"