[package]
name = "radio-pi"
version = "0.1.0"
authors = ["Andrew Burgess <andrew@andrewburgess.io>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "radio_pi"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
futures = "0.1"
hex = "0.3"
neon = "0.3.1"
neon-serde = "0.3"
serde_derive = "1.0"
serde = "1.0"
sha-1 = "0.8"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-process = "0.2"
tokio-signal = "0.2"

[dependencies.librespot]
git = "https://github.com/andrewburgess/librespot.git"